# picotermostato

./: .gitmodules  CMakeLists.txt  README.md  display.cpp  eeprom.cpp  encoder.cpp  encoder.pio  picotermostato.cpp  picotermostato.fzz  picotermostato.h  sensor.cpp  teclado.cpp
